@@ -261,6 +261,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   or ExtUser-driven requests.
 * (bug 3480) The warning saying that the page has a history when deleting it now
   contains the number of revisions in the history
+* $wgStylePath and $wgLogo are now set in the default LocalSettings.php file.
 
 === Bug fixes in 1.16 ===
 
